[package]
name = "frostr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
schnorr_fun = {version = "0.8.2", features = ["serde"]}
serde = "1.0.152"
serde_json = "1.0.91"
sha2 = "0.10.6"
